@@ -63,150 +63,150 @@ typedef enum {
 
 // eCore General Purpose Registers
 typedef enum {
-	E_CORE_GP_REG_BASE	   = 0xf0000,
-	E_REG_R0			   = E_CORE_GP_REG_BASE + 0x0000,
-	E_REG_R1			   = E_CORE_GP_REG_BASE + 0x0004,
-	E_REG_R2			   = E_CORE_GP_REG_BASE + 0x0008,
-	E_REG_R3			   = E_CORE_GP_REG_BASE + 0x000c,
-	E_REG_R4			   = E_CORE_GP_REG_BASE + 0x0010,
-	E_REG_R5			   = E_CORE_GP_REG_BASE + 0x0014,
-	E_REG_R6			   = E_CORE_GP_REG_BASE + 0x0018,
-	E_REG_R7			   = E_CORE_GP_REG_BASE + 0x001c,
-	E_REG_R8			   = E_CORE_GP_REG_BASE + 0x0020,
-	E_REG_R9			   = E_CORE_GP_REG_BASE + 0x0024,
-	E_REG_R10			   = E_CORE_GP_REG_BASE + 0x0028,
-	E_REG_R11			   = E_CORE_GP_REG_BASE + 0x002c,
-	E_REG_R12			   = E_CORE_GP_REG_BASE + 0x0030,
-	E_REG_R13			   = E_CORE_GP_REG_BASE + 0x0034,
-	E_REG_R14			   = E_CORE_GP_REG_BASE + 0x0038,
-	E_REG_R15			   = E_CORE_GP_REG_BASE + 0x003c,
-	E_REG_R16			   = E_CORE_GP_REG_BASE + 0x0040,
-	E_REG_R17			   = E_CORE_GP_REG_BASE + 0x0044,
-	E_REG_R18			   = E_CORE_GP_REG_BASE + 0x0048,
-	E_REG_R19			   = E_CORE_GP_REG_BASE + 0x004c,
-	E_REG_R20			   = E_CORE_GP_REG_BASE + 0x0050,
-	E_REG_R21			   = E_CORE_GP_REG_BASE + 0x0054,
-	E_REG_R22			   = E_CORE_GP_REG_BASE + 0x0058,
-	E_REG_R23			   = E_CORE_GP_REG_BASE + 0x005c,
-	E_REG_R24			   = E_CORE_GP_REG_BASE + 0x0060,
-	E_REG_R25			   = E_CORE_GP_REG_BASE + 0x0064,
-	E_REG_R26			   = E_CORE_GP_REG_BASE + 0x0068,
-	E_REG_R27			   = E_CORE_GP_REG_BASE + 0x006c,
-	E_REG_R28			   = E_CORE_GP_REG_BASE + 0x0070,
-	E_REG_R29			   = E_CORE_GP_REG_BASE + 0x0074,
-	E_REG_R30			   = E_CORE_GP_REG_BASE + 0x0078,
-	E_REG_R31			   = E_CORE_GP_REG_BASE + 0x007c,
-	E_REG_R32			   = E_CORE_GP_REG_BASE + 0x0080,
-	E_REG_R33			   = E_CORE_GP_REG_BASE + 0x0084,
-	E_REG_R34			   = E_CORE_GP_REG_BASE + 0x0088,
-	E_REG_R35			   = E_CORE_GP_REG_BASE + 0x008c,
-	E_REG_R36			   = E_CORE_GP_REG_BASE + 0x0090,
-	E_REG_R37			   = E_CORE_GP_REG_BASE + 0x0094,
-	E_REG_R38			   = E_CORE_GP_REG_BASE + 0x0098,
-	E_REG_R39			   = E_CORE_GP_REG_BASE + 0x009c,
-	E_REG_R40			   = E_CORE_GP_REG_BASE + 0x00a0,
-	E_REG_R41			   = E_CORE_GP_REG_BASE + 0x00a4,
-	E_REG_R42			   = E_CORE_GP_REG_BASE + 0x00a8,
-	E_REG_R43			   = E_CORE_GP_REG_BASE + 0x00ac,
-	E_REG_R44			   = E_CORE_GP_REG_BASE + 0x00b0,
-	E_REG_R45			   = E_CORE_GP_REG_BASE + 0x00b4,
-	E_REG_R46			   = E_CORE_GP_REG_BASE + 0x00b8,
-	E_REG_R47			   = E_CORE_GP_REG_BASE + 0x00bc,
-	E_REG_R48			   = E_CORE_GP_REG_BASE + 0x00c0,
-	E_REG_R49			   = E_CORE_GP_REG_BASE + 0x00c4,
-	E_REG_R50			   = E_CORE_GP_REG_BASE + 0x00c8,
-	E_REG_R51			   = E_CORE_GP_REG_BASE + 0x00cc,
-	E_REG_R52			   = E_CORE_GP_REG_BASE + 0x00d0,
-	E_REG_R53			   = E_CORE_GP_REG_BASE + 0x00d4,
-	E_REG_R54			   = E_CORE_GP_REG_BASE + 0x00d8,
-	E_REG_R55			   = E_CORE_GP_REG_BASE + 0x00dc,
-	E_REG_R56			   = E_CORE_GP_REG_BASE + 0x00e0,
-	E_REG_R57			   = E_CORE_GP_REG_BASE + 0x00e4,
-	E_REG_R58			   = E_CORE_GP_REG_BASE + 0x00e8,
-	E_REG_R59			   = E_CORE_GP_REG_BASE + 0x00ec,
-	E_REG_R60			   = E_CORE_GP_REG_BASE + 0x00f0,
-	E_REG_R61			   = E_CORE_GP_REG_BASE + 0x00f4,
-	E_REG_R62			   = E_CORE_GP_REG_BASE + 0x00f8,
-	E_REG_R63			   = E_CORE_GP_REG_BASE + 0x00fc,
+	E_REG_R0		= 0xf0000,
+	E_REG_R1		= 0xf0004,
+	E_REG_R2		= 0xf0008,
+	E_REG_R3		= 0xf000c,
+	E_REG_R4		= 0xf0010,
+	E_REG_R5		= 0xf0014,
+	E_REG_R6		= 0xf0018,
+	E_REG_R7		= 0xf001c,
+	E_REG_R8		= 0xf0020,
+	E_REG_R9		= 0xf0024,
+	E_REG_R10		= 0xf0028,
+	E_REG_R11		= 0xf002c,
+	E_REG_R12		= 0xf0030,
+	E_REG_R13		= 0xf0034,
+	E_REG_R14		= 0xf0038,
+	E_REG_R15		= 0xf003c,
+	E_REG_R16		= 0xf0040,
+	E_REG_R17		= 0xf0044,
+	E_REG_R18		= 0xf0048,
+	E_REG_R19		= 0xf004c,
+	E_REG_R20		= 0xf0050,
+	E_REG_R21		= 0xf0054,
+	E_REG_R22		= 0xf0058,
+	E_REG_R23		= 0xf005c,
+	E_REG_R24		= 0xf0060,
+	E_REG_R25		= 0xf0064,
+	E_REG_R26		= 0xf0068,
+	E_REG_R27		= 0xf006c,
+	E_REG_R28		= 0xf0070,
+	E_REG_R29		= 0xf0074,
+	E_REG_R30		= 0xf0078,
+	E_REG_R31		= 0xf007c,
+	E_REG_R32		= 0xf0080,
+	E_REG_R33		= 0xf0084,
+	E_REG_R34		= 0xf0088,
+	E_REG_R35		= 0xf008c,
+	E_REG_R36		= 0xf0090,
+	E_REG_R37		= 0xf0094,
+	E_REG_R38		= 0xf0098,
+	E_REG_R39		= 0xf009c,
+	E_REG_R40		= 0xf00a0,
+	E_REG_R41		= 0xf00a4,
+	E_REG_R42		= 0xf00a8,
+	E_REG_R43		= 0xf00ac,
+	E_REG_R44		= 0xf00b0,
+	E_REG_R45		= 0xf00b4,
+	E_REG_R46		= 0xf00b8,
+	E_REG_R47		= 0xf00bc,
+	E_REG_R48		= 0xf00c0,
+	E_REG_R49		= 0xf00c4,
+	E_REG_R50		= 0xf00c8,
+	E_REG_R51		= 0xf00cc,
+	E_REG_R52		= 0xf00d0,
+	E_REG_R53		= 0xf00d4,
+	E_REG_R54		= 0xf00d8,
+	E_REG_R55		= 0xf00dc,
+	E_REG_R56		= 0xf00e0,
+	E_REG_R57		= 0xf00e4,
+	E_REG_R58		= 0xf00e8,
+	E_REG_R59		= 0xf00ec,
+	E_REG_R60		= 0xf00f0,
+	E_REG_R61		= 0xf00f4,
+	E_REG_R62		= 0xf00f8,
+	E_REG_R63		= 0xf00fc
 } e_gp_reg_id_t;
 
 // eCore Special Registers
 typedef enum {
-	E_CORE_SP_REG_BASE	   = 0xf0000,
 	// Control registers
-	E_REG_CONFIG		   = E_CORE_SP_REG_BASE + 0x0400,
-	E_REG_STATUS		   = E_CORE_SP_REG_BASE + 0x0404,
-	E_REG_PC			   = E_CORE_SP_REG_BASE + 0x0408,
-	E_REG_DEBUGSTATUS	   = E_CORE_SP_REG_BASE + 0x040c,
-	E_REG_LC			   = E_CORE_SP_REG_BASE + 0x0414,
-	E_REG_LS			   = E_CORE_SP_REG_BASE + 0x0418,
-	E_REG_LE			   = E_CORE_SP_REG_BASE + 0x041c,
-	E_REG_IRET			   = E_CORE_SP_REG_BASE + 0x0420,
-	E_REG_IMASK			   = E_CORE_SP_REG_BASE + 0x0424,
-	E_REG_ILAT			   = E_CORE_SP_REG_BASE + 0x0428,
-	E_REG_ILATST		   = E_CORE_SP_REG_BASE + 0x042C,
-	E_REG_ILATCL		   = E_CORE_SP_REG_BASE + 0x0430,
-	E_REG_IPEND			   = E_CORE_SP_REG_BASE + 0x0434,
-	E_REG_CTIMER0		   = E_CORE_SP_REG_BASE + 0x0438,
-	E_REG_CTIMER1		   = E_CORE_SP_REG_BASE + 0x043C,
-	E_REG_FSTATUS		   = E_CORE_SP_REG_BASE + 0x0440,
-	E_REG_DEBUGCMD		   = E_CORE_SP_REG_BASE + 0x0448,
+	E_REG_CONFIG		= 0xf0400,
+	E_REG_STATUS		= 0xf0404,
+	E_REG_PC		= 0xf0408,
+	E_REG_DEBUGSTATUS	= 0xf040c,
+	E_REG_LC		= 0xf0414,
+	E_REG_LS		= 0xf0418,
+	E_REG_LE		= 0xf041c,
+	E_REG_IRET		= 0xf0420,
+	E_REG_IMASK		= 0xf0424,
+	E_REG_ILAT		= 0xf0428,
+	E_REG_ILATST		= 0xf042C,
+	E_REG_ILATCL		= 0xf0430,
+	E_REG_IPEND		= 0xf0434,
+	E_REG_CTIMER0		= 0xf0438,
+	E_REG_CTIMER1		= 0xf043C,
+	E_REG_FSTATUS		= 0xf0440,
+	E_REG_DEBUGCMD		= 0xf0448,
 
 	// DMA Registers
-	E_REG_DMA0CONFIG	   = E_CORE_SP_REG_BASE + 0x0500,
-	E_REG_DMA0STRIDE	   = E_CORE_SP_REG_BASE + 0x0504,
-	E_REG_DMA0COUNT		   = E_CORE_SP_REG_BASE + 0x0508,
-	E_REG_DMA0SRCADDR	   = E_CORE_SP_REG_BASE + 0x050C,
-	E_REG_DMA0DSTADDR	   = E_CORE_SP_REG_BASE + 0x0510,
-	E_REG_DMA0AUTODMA0	   = E_CORE_SP_REG_BASE + 0x0514,
-	E_REG_DMA0AUTODMA1	   = E_CORE_SP_REG_BASE + 0x0518,
-	E_REG_DMA0STATUS	   = E_CORE_SP_REG_BASE + 0x051C,
-	E_REG_DMA1CONFIG	   = E_CORE_SP_REG_BASE + 0x0520,
-	E_REG_DMA1STRIDE	   = E_CORE_SP_REG_BASE + 0x0524,
-	E_REG_DMA1COUNT		   = E_CORE_SP_REG_BASE + 0x0528,
-	E_REG_DMA1SRCADDR	   = E_CORE_SP_REG_BASE + 0x052C,
-	E_REG_DMA1DSTADDR	   = E_CORE_SP_REG_BASE + 0x0530,
-	E_REG_DMA1AUTODMA0	   = E_CORE_SP_REG_BASE + 0x0534,
-	E_REG_DMA1AUTODMA1	   = E_CORE_SP_REG_BASE + 0x0538,
-	E_REG_DMA1STATUS	   = E_CORE_SP_REG_BASE + 0x053C,
+	E_REG_DMA0CONFIG	= 0xf0500,
+	E_REG_DMA0STRIDE	= 0xf0504,
+	E_REG_DMA0COUNT		= 0xf0508,
+	E_REG_DMA0SRCADDR	= 0xf050c,
+	E_REG_DMA0DSTADDR	= 0xf0510,
+	E_REG_DMA0AUTODMA0	= 0xf0514,
+	E_REG_DMA0AUTODMA1	= 0xf0518,
+	E_REG_DMA0STATUS	= 0xf051c,
+	E_REG_DMA1CONFIG	= 0xf0520,
+	E_REG_DMA1STRIDE	= 0xf0524,
+	E_REG_DMA1COUNT		= 0xf0528,
+	E_REG_DMA1SRCADDR	= 0xf052c,
+	E_REG_DMA1DSTADDR	= 0xf0530,
+	E_REG_DMA1AUTODMA0	= 0xf0534,
+	E_REG_DMA1AUTODMA1	= 0xf0538,
+	E_REG_DMA1STATUS	= 0xf053c,
 
 	// Memory Protection Registers
-	E_REG_MEMSTATUS		   = E_CORE_SP_REG_BASE + 0x0604,
-	E_REG_MEMPROTECT	   = E_CORE_SP_REG_BASE + 0x0608,
+	E_REG_MEMSTATUS		= 0xf0604,
+	E_REG_MEMPROTECT	= 0xf0608,
 
 	// Node Registers
-	E_REG_MESHCFG		   = E_CORE_SP_REG_BASE + 0x0700,
-	E_REG_COREID		   = E_CORE_SP_REG_BASE + 0x0704,
-	E_REG_RESETCORE		   = E_CORE_SP_REG_BASE + 0x070c,
+	E_REG_MESHCONFIG	= 0xf0700,
+	E_REG_COREID		= 0xf0704,
+	E_REG_MULTICAST		= 0xf0708,
+	E_REG_RESETCORE		= 0xf070c,
+	E_REG_CMESHROUTE	= 0xf0710,
+	E_REG_XMESHROUTE	= 0xf0714,
+	E_REG_RMESHROUTE	= 0xf0718
 } e_core_reg_id_t;
 
 
 // Chip registers
 typedef enum {
-	E_CHIP_REG_BASE		= 0xf0000,
-	E_REG_LINKCFG		= E_CHIP_REG_BASE + 0x0300,
-	E_REG_LINKTXCFG		= E_CHIP_REG_BASE + 0x0304,
-	E_REG_LINKRXCFG		= E_CHIP_REG_BASE + 0x0308,
-	E_REG_GPIOCFG		= E_CHIP_REG_BASE + 0x030c,
-	E_REG_FLAGCFG		= E_CHIP_REG_BASE + 0x0318,
-	E_REG_SYNC			= E_CHIP_REG_BASE + 0x031c,
-	E_REG_HALT			= E_CHIP_REG_BASE + 0x0320,
-	E_REG_RESET			= E_CHIP_REG_BASE + 0x0324,
-	E_REG_LINKDEBUG		= E_CHIP_REG_BASE + 0x0328,
+	E_REG_LINKCFG		= 0xf0300,
+	E_REG_LINKTXCFG		= 0xf0304,
+	E_REG_LINKRXCFG		= 0xf0308,
+	E_REG_GPIOCFG		= 0xf030c,
+	E_REG_FLAGCFG		= 0xf0318,
+	E_REG_SYNC		= 0xf031c,
+	E_REG_HALT		= 0xf0320,
+	E_REG_RESET		= 0xf0324,
+	E_REG_LINKDEBUG		= 0xf0328
 } e_chip_regs_t;
 
 
 // Epiphany system registers
 typedef enum {
-	E_SYS_REG_BASE  = 0,
-	E_SYS_RESET     = E_SYS_REG_BASE + 0x0040,
-	E_SYS_CFGTX     = E_SYS_REG_BASE + 0x0044,
-	E_SYS_CFGRX     = E_SYS_REG_BASE + 0x0048,
-	E_SYS_CFGCLK    = E_SYS_REG_BASE + 0x004C,
-	E_SYS_COREID    = E_SYS_REG_BASE + 0x0050,
-	E_SYS_VERSION   = E_SYS_REG_BASE + 0x0054,
-	E_SYS_GPIOIN    = E_SYS_REG_BASE + 0x0058,
-	E_SYS_GPIOOUT   = E_SYS_REG_BASE + 0x005C,
+	E_SYS_RESET		= 0x0040,
+	E_SYS_CFGTX		= 0x0044,
+	E_SYS_CFGRX		= 0x0048,
+	E_SYS_CFGCLK		= 0x004c,
+	E_SYS_COREID		= 0x0050,
+	E_SYS_VERSION		= 0x0054,
+	E_SYS_GPIOIN		= 0x0058,
+	E_SYS_GPIOOUT		= 0x005c
 } e_sys_reg_id_t;
 
 typedef union {
@@ -260,7 +260,7 @@ typedef union {
 	} fields;
 } e_syscfg_version_t;
 
-// The following is for E_CFG_SYSDATA_IN or E_CFG_SYSDATA_OUT
+// The following is for E_SYS_GPIOIN and E_SYS_GPIOOUT
 typedef union {
 	unsigned int reg;
 	struct {
